fixed some spacing issues with the star rating

--- a/src/components/compents.css
+++ b/src/components/compents.css
@@ -146,7 +146,7 @@ a {
 }
 
 #star {
-  margin: 0px;
+  margin-inline: 10px;
 }
 
 /* ******************** */
@@ -165,7 +165,7 @@ a {
   /* height: 100vh; */
   /* display: flex; */
   flex-wrap: wrap;
-  margin-inline: 15px;
+  margin-inline: calc(20px + 5vw);
   padding: 15px 0px;
 }
 
@@ -179,6 +179,7 @@ a {
   margin-inline: 20px;
 }
 #productScreenBtn {
+  margin-top: 15px;
   margin-inline: 5px;
 }
 
@@ -278,6 +279,11 @@ img {
   transform: translate(85px, -25px);
   text-underline-offset: unset;
   color: black;
+}
+#discountSavings {
+  font-size: 14px;
+  color: rgb(79, 79, 79);
+  transform: rotate(15deg);
 }
 
 #cartCount {
